--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,1 +1,13 @@
 copyright: "© Les Restaurants du Coeur - Les relais du Coeur 2025"
+backToTop: "Revenir en haut"
+changeLanguage: "Changer la langue"
+changeTheme: "Thème d'affichage"
+dark: "Sombre"
+editThisPage: "Modifier cette page sur Github →"
+lastUpdated: "Dernière modification"
+light: "Clair"
+noResultsFound: "Pas de résultats trouvés"
+onThisPage: "Sur cette page"
+poweredBy: "Propulsé par Hextra"
+readMore: "Lire plus →"
+searchPlaceholder: "Rechercher..."
