add: update color

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,4 +1,4 @@
-copyright: "© Les Restaurants du Coeur - Les relais du Coeur 2025"
+copyright: "© Les Restaurants du Coeur - Les relais du Coeur"
 backToTop: "Revenir en haut"
 changeLanguage: "Changer la langue"
 changeTheme: "Thème d'affichage"
